// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tomo testing tools can format objects for use as snapshots 1`] = `
"{
    type: directory,
    children: [
        {
            type: file
        },
        {
            type: directory,
            children: [
                {
                    type: directory,
                    children: [
                        {
                            type: file
                        }
                    ]
                }
            ]
        }
    ]
}
"
`;

exports[`Tomo testing tools get directory tree 1`] = `
"{
    name: test-fold,
    children: [
        {
            name: a.txt,
            type: file
        },
        {
            name: b,
            children: [
                {
                    name: b.txt,
                    type: file
                }
            ],
            type: directory
        },
        {
            name: c,
            children: [
                {
                    name: c.txt,
                    type: file
                },
                {
                    name: d,
                    children: [
                        {
                            name: d.txt,
                            type: file
                        }
                    ],
                    type: directory
                }
            ],
            type: directory
        }
    ],
    type: directory
}
"
`;

exports[`Tomo testing tools get directory tree 2`] = `
"{
    children: [
        {
            extension: .txt,
            type: file
        },
        {
            children: [
                {
                    extension: .txt,
                    type: file
                }
            ],
            type: directory
        },
        {
            children: [
                {
                    extension: .txt,
                    type: file
                },
                {
                    children: [
                        {
                            extension: .txt,
                            type: file
                        }
                    ],
                    type: directory
                }
            ],
            type: directory
        }
    ],
    type: directory
}
"
`;
